--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "@mui/x-charts": "^7.16.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "firebase": "^10.13.1",
-    "next": "14.2.9",
+    "next": "14.2.11",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
