--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,5 @@
     "next/core-web-vitals",
     "next/typescript"
   ],
-  "rules": {
-    "@typescript-eslint/no-explicit-any": "off"
-  }
+  "rules": {}
 }
